[package]
name = "yas"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[dependencies]
mimalloc = "0.1.42"

[dependencies.tokio]
version = "1.38.0"
features = ["rt", "macros"]

[dependencies.sqlite]
version = "0.36.0"
features = ["bundled"]

[dependencies.rquickjs]
version = "0.6.2"
features = ["array-buffer", "futures", "loader", "rust-alloc", "macro", "phf"]

[dependencies.reqwest]
version = "0.12.4"
features = ["brotli", "gzip"]

[dependencies.minicbor]
version = "0.24.0"
features = ["full"]
